# wmd77

./: Cargo.toml  Makefile  README.md  wmd77.desktop
etc/xdg/wmd77/: bar.sh  startup.sh
extras/conky/: README.md  conkyrc
extras/sxhkd/: README.md
src/: config.rs  hooks.rs  keybindings.rs  layouts.rs  main.rs  menus.rs  mouse.rs  scratchpads.rs  theme.rs
