[package]
name = "wmd77"
version = "0.4.0"
description = "Simple Tiling WM written with Penrose Libraries."
authors = ["Daniel Azevedo", "dani-77 <daniazevedo77@posteo.net>"]
license = "MIT"
edition = "2024"

[dependencies]
anyhow = "1.0"
penrose = "0.4.0"
penrose_ui = "0.4.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
